# HsWl

./: .gitignore  LICENSE  README.md  README_NEW.md
0_Book/: client  client.c  compile  prepare_xml  trace_binary.txt  trace_json.txt  trace_json_pretty.txt  trace_simple.txt  wire.xml
1_FFI/: README.md
1_FFI/app/: Main.hs
1_FFI/includes/: wayland2hs.h.gch
1_FFI/src/: Client.chs
2_Generator/: CHANGELOG.md  CODE  HsWlGenerator.cabal  Protocol.hs  Wire.hs  copyhs
2_Generator/app/: Main.hs
2_Generator/src/: Casing.hs  GenerateHaskell.hs  ParseWaylandXml.hs  Types.hs
3_Client/: CHANGELOG.md  Client.cabal  README.txt  copyexe  wayland-tracker-help.txt
3_Client/Wayland/Client/: Buffer.hs  Callback.hs  Client.hs  Display.hs  FillFrame.hs  OsShm.chs  Registry.hs  Seat.hs  Shm.hs  Support.hs  Types.hs  XdgSurface.hs  XdgToplevel.hs  XdgWmBase.hs
3_Client/Wayland/Wire/: Protocol.hs  Socket.chs  Support.hs  Wire.hs
3_Client/app/: Main.hs
3_Client/cbits/: Shm.chs  WaylandSocket.hs  wayland-msg-handling.c  wayland-msg-handling.h
3_Client/src/: Client.hs  ClientLib.hs  ClientLibSupport.hs  ClientSupport.hs  FillFrame.hs  Mayland.hs  Protocol.hs  ProtocolSupport.hs  Shm.chs  Socket.chs  Types.hs  Wire.hs  WireSupport.hs
