cabal-version:      3.0
name:               HsWlGenerator
version:            0.1.0.0
synopsis:
    Scan Wayland XML specifications and generate Haskell code to process Wayland wire data
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Roland Senn
maintainer:         rsx@bluewin.ch
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Types
                      , ParseWaylandXml
                      , GenerateHaskell
    other-modules:    Casing

    -- other-extensions:
    build-depends:    base ^>=4.17.0.0
                      , extra
                      , xml
                      , text
                      , split
                      , containers
                      , text-builder-linear

    hs-source-dirs:   src
    default-language: Haskell2010

executable generator
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.0.0,
        text,
        HsWlGenerator

    hs-source-dirs:   app
    default-language: Haskell2010
